trying to fix bg image size on mobile

--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -15,7 +15,7 @@
 }
 
 .about-div {
-  height: 36vh;
+  height: 73vh;
 }
 .connect-div {
   height: 38vh;
