--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -24,27 +24,27 @@ body {
 
 .contact {
   background-image: url('https://res.cloudinary.com/tonipanoche/image/upload/w_auto,dpr_auto,q_auto/v1618923382/menstruation-project/mp_background_contact.jpg');
-  background-size: cover;
+  background-size: auto 100vh;
   background-attachment: fixed;
 }
 
 .imprint {
   background-image: url('https://res.cloudinary.com/tonipanoche/image/upload/w_auto,dpr_auto,q_auto/v1618923382/menstruation-project/mp_background_imprint.jpg');
-  background-size: cover;
+  background-size: auto 100vh;
   background-attachment: fixed;
 
 }
 
 .privacy {
   background-image: url('https://res.cloudinary.com/tonipanoche/image/upload/w_auto,dpr_auto,q_auto/v1618923382/menstruation-project/mp_background_imprint.jpg');
-  background-size: cover;
+  background-size: auto 100vh;
   background-attachment: fixed;
 
 }
 
 .about {
   background-image: url('https://res.cloudinary.com/tonipanoche/image/upload/w_auto,dpr_auto,q_auto/v1618923382/menstruation-project/mp_background_about.jpg');
-  background-size: cover;
+  background-size: auto 100vh;
   background-attachment: fixed;
 
 }
